# HeatTransfer

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  b_part.cpp  b_part.hpp  base_function.cpp  base_function.hpp  build.bat  function1d.hpp  l_part.cpp  l_part.hpp  main.cpp  plot.ipynb  plotting.ipynb  shift_function.cpp  shift_function.hpp  solver.cpp  solver.hpp
plotting/: plot.ipynb  requirements.txt  results.txt
src/: b_part.cpp  b_part.hpp  base_function.cpp  base_function.hpp  function1d.hpp  k_function.cpp  k_function.hpp  main.cpp  shift_function.cpp  shift_function.hpp  solver.cpp
